tests/baselines/reference/parserSkippedTokens4.errors.txt
==== tests/cases/compiler/parserSkippedTokens4.ts (2 errors) ====
    \  /regexp/;
    ~
!!! parserSkippedTokens4.ts(1,1): error TS1001: Unexpected character "\".
    ~
!!! parserSkippedTokens4.ts(1,1): error TS1008: Unexpected token; 'module, class, interface, enum, import or statement' expected.